tests/NormalTests/paczka1/fuzzy1/67142027.err
Error in line 5: qA0vt S693 96,0
Error in line 9: zRF7lYL S693 62,0
Error in line 18: jlziWO A391 99,4
Error in line 23: IutquK75 A391 78,6
Error in line 30: zRF7lYL A391 55,2
Error in line 32: zRF7lYL A318 31,8
